feat: Transaction removal - Adding a button that will remove duplicate transactions (same date, same amount). This is located in each specific account. It's useful in the event you merge two accounts together from providers and end up with dupes - Fixing the desktop header spacing from having too much padding - Readme update to fix a link - Correcting some account detail dialogs not closing due to wrong context - Adding a way to delete transactions individually - Improving transaction dialog on desktop to use more horizontal space - Fixing account add not showing on speed dial
